# NDT-Net

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt
.devcontainer/: devcontainer.json
core/: CMakeLists.txt
core/include/ndtnetpp_core/: kullback_leibler.h  linalg.h  ndt.h  pointclouds.h  voxel.h
core/src/: kullback_leibler.c  linalg.c  matrix.c  ndt.c  normal_distributions.c  pointclouds.c  voxel.c
core/tests/: test_voxel.cpp
core1/: kullback_leibler.py  ndt.py  normal_distributions.py  voxel.py
core_legacy/: CMakeLists.txt
core_legacy/include/ndnet_core/: kullback_leibler.h  ndt.h  normal_distributions.h  voxel.h
core_legacy/include/ndtnetpp_core/: ndt.h  normal_distributions.h
core_legacy/src/: kullback_leibler.c  matrix.c  ndt.c  normal_distributions.c  pointclouds.c  voxel.c
core_legacy/tests/: ndt_downsample.c  test_ndt.cpp  test_pointclouds.cpp  test_voxel.cpp
core_old/: CMakeLists.txt
core_old/include/ndtnetpp_core/: matrix.h  ndt.h
core_old/src/: ndt.c
core_rust/: Cargo.toml
core_rust/src/: voxel.rs
ndnet/datasets/: CARLA_NDT_Seg.py  CARLA_Seg.py
ndnet/models/: ndtnetpp.py  pointnet.py
ndnet/preprocessing/: ndt.py  ndt_legacy.py  ndtnet_preprocessing.py
ndnet/preprocessing/core/: kullback_leibler.py  ndt.py  normal_distributions.py
ndnet/test/suites/: libs.py
ndtnetpp/datasets/: CARLA_NDT_Seg.py  CARLA_Seg.py
ndtnetpp/models/: ndtnet.py  ndtnetpp.py  pointnet.py  pointnetpp.py
ndtnetpp/preprocessing/: ndt.py  ndt_legacy.py  ndt_old.py  ndtnet_preprocessing.py
ndtnetpp/preprocessing/core/: kullback_leibler.py  ndt.py  normal_distributions.py  voxel.py
ndtnetpp/test/: tests.py
ndtnetpp/test/suites/: libs.py
ndtnetpp/tools/: train.py
tools/: hyperparameter_search.py  point_histogram.py  seg_viz.py  train.py  train_multiscale.py  train_pointnet.py  viz.py
